# rsigild

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  daemon.rs  logger.rs  main.rs
src/components/: ProcessDetail.css  ProcessDetail.tsx  ProcessForm.css  ProcessForm.tsx  ProcessList.css  ProcessList.tsx
