[package]
name = "rsigild"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
directories = "5.0"
log = "0.4"
fern = "0.6"
anyhow = "1.0"
encoding_rs = "0.8"

[target.'cfg(windows)'.dependencies]
win32job = "2"
winapi = { version = "0.3", features = ["processthreadsapi", "handleapi", "winnt", "winuser", "wincon", "consoleapi", "winbase"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
